src/scss/overlay.scss
// DEFAULT LAYOUT
%o-overlay {
	position: fixed;
	font-family: oFontsGetFontFamilyWithFallbacks(BentonSans);
	top: 50%;
	left: 50%;
	z-index: 10;
	box-sizing: border-box;
	opacity: 1;
	transition: opacity 0.3s ease-in-out;
	border: $o-overlay-border-width solid oColorsGetColorFor(o-overlay, border);
	background: oColorsGetColorFor(o-overlay, background);
	border-radius: 5px;
}

%o-overlay-shadow {
	background: rgba(0, 0, 0, 0.2);
	position: fixed;
	height: 150%; // because on some phones scrolling upwards detaches a 100% height overlay from the bottom of the screen
	width: 100%;
	top: 0;
	left: 0;
	z-index: 10;
	opacity: 1;
	transition: opacity 0.3s ease-in-out;
}

%o-overlay__heading {
	@include oFtTypographyFontSize(16);
	margin: 0;
	background: oColorsGetColorFor(o-overlay-heading, background);
	color: oColorsGetColorFor(o-overlay-heading, text);
	font-weight: bold;
	overflow: auto;
}

%o-overlay__title {
	margin: 10px 0 10px 20px;
	display: block;
	line-height: 20px;
	overflow: auto;
}

%o-overlay__close {
	cursor: pointer;
	padding: 10px;
	margin: 0;
	border: 0;
	background: transparent;
	float: right;
	outline: none;
}

%o-overlay__close-icon {
	@include oFtIconsBaseIconStyles();
	@extend %o-ft-icons-icon--cross;
	width: 18px;
	height: 18px;
	font-size: 10px;
	line-height: 19px;
	border: 1px solid;
	border-radius: 50%;
	@include oColorsFor(o-overlay-close);

	#{$o-hoverable-if-hover-enabled} &:hover {
		color: oColorsGetColorFor(o-overlay-close-shaded, text);
		background-color: oColorsGetColorFor(o-overlay-close-shaded, background);
	}
}

%o-overlay__heading--shaded {
	background: oColorsGetColorFor(o-overlay-heading-shaded, background);
	color: oColorsGetColorFor(o-overlay-heading-shaded, text);
	font-weight: normal;

	%o-overlay__close-icon {
		@include oColorsFor(o-overlay-close-shaded);

		#{$o-hoverable-if-hover-enabled} &:hover {
			color: oColorsGetColorFor(o-overlay-close, text);
			background-color: oColorsGetColorFor(o-overlay-close, background);
		}
	}
}

%o-overlay__content {
	position: relative;
	box-sizing: border-box;
	overflow: auto;
	padding: 20px;

	> *:first-child {
		margin-top: 0;
	}

	> *:last-child {
		margin-bottom: 0;
	}

	%o-overlay__content--no-gutter {
		padding: 0;
	}
}

%o-overlay__arrow {
	position: absolute;
}

%o-overlay__arrow-top {
	@extend %o-overlay__arrow;

	@include oOverlayUpArrow();
}

%o-overlay__arrow-bottom {
	@extend %o-overlay__arrow;

	@include oOverlayDownArrow();
}

%o-overlay__arrow-left {
	@extend %o-overlay__arrow;

	@include oOverlayLeftArrow();
}

%o-overlay__arrow-right {
	@extend %o-overlay__arrow;

	@include oOverlayRightArrow();
}

%o-overlay--compact {
	%o-overlay__heading {
		@include oFtTypographyFontSize(12);
	}

	%o-overlay__content {
		padding: 10px;
	}

	%o-overlay__title {
		margin: 5px 0 5px 10px;
		line-height: 20px;
	}

	%o-overlay__close-icon {
		width: 14px;
		height: 14px;
		font-size: 8px;
		line-height: 15px;
	}

	%o-overlay__close {
		padding: 5px 5px 5px 10px;
	}
}

// FULL WIDTH AND HEIGHT

%o-overlay--full-width {
	padding-left: 0;
	padding-right: 0;
	width: 100%;
	left: 0;
	overflow: hidden;

	%o-overlay__content {
		width: 100%;
		overflow: scroll;
	}
}

%o-overlay--full-height {
	padding-top: 0;
	padding-bottom: 0;
	height: 100%;
	top: 0;
	overflow: hidden;

	%o-overlay__content {
		height: 100%;
		overflow: scroll;
	}
}

